# elapsed.py

./: README.md  setup.cfg  setup.py
elapsed/: __init__.py
tests/elapsed/examples/process/: current.py
tests/examples/datetime/: example.py
tests/examples/process/: pid.py
