[metadata]
name = elapsed
version = 2018.11.20
url = https://github.com/looking-for-a-job/elapsed.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = elapsed

[options]
install_requires = 
	public
	setuptools
packages = 
	elapsed
