# https://pypi.org/project/setupcfg-generator/
[metadata]
name = elapsed
version = 2019.4.13
url = https://github.com/looking-for-a-job/elapsed.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = elapsed

[options]
install_requires = 
	public
	setuptools
packages = 
	elapsed
